# coupon-api

./: .env  Cargo.toml  README.md
common/: Cargo.toml
common/src/: lib.rs  log.rs  response.rs
platform/: Cargo.toml
platform/src/: lib.rs
platform/src/jd/: mod.rs
platform/src/tb/: mod.rs  request.rs
platform/src/tb/method/: ju_items_search.rs  mod.rs  tbk_activity_info_get.rs  tbk_coupon_get.rs  tbk_dg_material_optional.rs  tbk_dg_optimus_material.rs  tbk_dg_tpwd_report_get.rs  tbk_item_info_upgrade_get.rs  tbk_optimus_tou_material_ids_get.rs  tbk_spread_get.rs  tbk_tpwd_create.rs
routers/: Cargo.toml
routers/src/: init.rs  lib.rs
routers/src/jd/: api.rs
routers/src/pdd/: api.rs  handler.rs  mod.rs
routers/src/tb/: api.rs  handler.rs  mod.rs
utils/: Cargo.toml
utils/src/: lib.rs
