[workspace]
members = ["bin", "common", "middleware", "platform", "routers", "utils"]
resolver = "1"

[workspace.dependencies]
tokio = { version = "1.36.0", features = ["full"] }
axum = { version = "0.7.4", features = ["macros"] }
reqwest = { version = "0.11.24", features = ["blocking", "json", "cookies"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0.197", features = ["derive"] }
validator = { version = "0.16.1", features = ["derive"] }
serde_json = "1.0.114"
dotenv = "0.15.0"
http = "1.0.0"
log = "0.4.20"
anyhow = "1.0.80"
chrono = "0.4.34"
hex = "0.4.3"
hmac = "0.12.1"
sha2 = "0.10.8"
sha256 = "1.5.0"
