[package]
name = "routers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
http = { workspace = true }
tower-http = { workspace = true }
serde_json = { workspace = true }
validator = { workspace = true }
serde = { workspace = true }
dotenv = { workspace = true }

common = { path = "../common" }
utils = { path = "../utils" }
platform = { path = "../platform" }
